--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "coverage": "jest --coverage",
-    "prepare": "husky install",
+    "prepare": "husky",
     "e2e": "cypress run",
     "e2e:build": "npm run msw && npm run build",
     "e2e:open": "cypress open",
@@ -21,58 +21,60 @@
     "msw": "msw init public"
   },
   "dependencies": {
-    "@tanstack/react-query": "5.15.5",
-    "@vercel/speed-insights": "1.0.2",
-    "clsx": "2.1.0",
-    "dotaconstants": "7.20.0",
-    "next": "14.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@tanstack/react-query": "5.59.0",
+    "@vercel/speed-insights": "1.0.12",
+    "clsx": "2.1.1",
+    "dotaconstants": "8.12.0",
+    "next": "14.2.14",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "7.6.6",
-    "@storybook/addon-essentials": "7.6.6",
-    "@storybook/addon-links": "7.6.6",
-    "@storybook/nextjs": "7.6.6",
-    "@storybook/react": "7.6.6",
-    "@tanstack/react-query-devtools": "5.15.5",
-    "@testing-library/cypress": "10.0.1",
-    "@testing-library/jest-dom": "6.1.6",
-    "@testing-library/react": "14.1.2",
+    "@storybook/addon-actions": "8.3.5",
+    "@storybook/addon-essentials": "8.3.5",
+    "@storybook/addon-links": "8.3.5",
+    "@storybook/nextjs": "8.3.5",
+    "@storybook/react": "8.3.5",
+    "@tanstack/react-query-devtools": "5.59.0",
+    "@testing-library/cypress": "10.0.2",
+    "@testing-library/jest-dom": "6.5.0",
+    "@testing-library/react": "16.0.1",
     "@testing-library/user-event": "14.5.2",
-    "@types/jest": "29.5.11",
-    "@types/react": "18.2.46",
-    "@types/react-dom": "18.2.18",
-    "@typescript-eslint/eslint-plugin": "6.16.0",
-    "@typescript-eslint/parser": "6.16.0",
-    "css-loader": "6.8.1",
-    "cypress": "13.6.2",
-    "eslint": "8.56.0",
-    "eslint-config-next": "14.0.4",
+    "@types/css-modules": "1.0.5",
+    "@types/jest": "29.5.13",
+    "@types/react": "18.3.11",
+    "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "8.8.0",
+    "@typescript-eslint/parser": "8.8.0",
+    "css-loader": "7.1.2",
+    "cypress": "13.15.0",
+    "eslint": "8.57.1",
+    "eslint-config-next": "14.2.14",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-cypress": "2.15.1",
-    "eslint-plugin-jest": "27.6.0",
-    "eslint-plugin-react": "7.33.2",
-    "eslint-plugin-storybook": "0.6.15",
-    "eslint-plugin-typescript-sort-keys": "3.1.0",
-    "husky": "8.0.3",
+    "eslint-plugin-cypress": "3.5.0",
+    "eslint-plugin-jest": "28.8.3",
+    "eslint-plugin-react": "7.37.1",
+    "eslint-plugin-storybook": "0.9.0",
+    "eslint-plugin-typescript-sort-keys": "3.3.0",
+    "husky": "9.1.6",
     "identity-obj-proxy": "3.0.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-watch-typeahead": "2.2.2",
-    "lint-staged": "15.2.0",
-    "msw": "2.0.11",
-    "msw-storybook-addon": "2.0.0--canary.122.06f0c92.0",
+    "lint-staged": "15.2.10",
+    "msw": "2.4.9",
+    "msw-storybook-addon": "2.0.3",
     "next-sitemap": "4.2.3",
-    "prettier": "3.1.1",
-    "sass": "1.69.6",
-    "sass-loader": "13.3.3",
-    "storybook": "7.6.6",
-    "style-loader": "3.3.3",
-    "stylelint": "15.11.0",
-    "stylelint-config-sass-guidelines": "10.0.0",
-    "ts-jest": "29.1.1",
-    "typescript": "5.2.2"
+    "prettier": "3.3.3",
+    "sass": "1.79.4",
+    "sass-loader": "16.0.2",
+    "storybook": "8.3.5",
+    "style-loader": "4.0.0",
+    "stylelint": "16.9.0",
+    "stylelint-config-sass-guidelines": "12.1.0",
+    "ts-jest": "29.2.5",
+    "ts-node": "10.9.2",
+    "typescript": "5.6.2"
   },
   "msw": {
     "workerDirectory": "public"
